# hackathon-ai-book

./: .gitignore  404.html  ACCESS_FRONTEND.md  BACKEND_HOSTING_GUIDE.md  CHATBOT_FIXES.md  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_RAG_CHATBOT_IMPLEMENTATION.md  COMPLETE_WORKING_CHATBOT.md  DEPLOYMENT_INSTRUCTIONS.md  FINAL_CHATBOT_FIXES.md  FINAL_OPEN_FIX.md  FINAL_RAG_FIXES.md  FINAL_RAG_SYSTEM_SUMMARY.md  FINAL_RAG_VERIFICATION.md  FINAL_SOLUTION.md  FIXED_ISSUES.md  FIXED_PROCESS_ERROR.md  FULL_DEPLOYMENT_GUIDE.md  GEMINI_API_FULLY_WORKING.md  GEMINI_INTEGRATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_SETUP_COMPLETE.md  README.md  RUNNING.md  SETUP_COMPLETE.txt  SOLUTION_SUMMARY.md  STARTUP_INSTRUCTIONS.md  SYSTEM_STATUS.md  check_collection_config.py  deploy.sh  docusaurus.config.js  final_system_test.py  index.html  list_gemini_models.py  package-lock.json  package.json  requirements.txt  roadmap.html  setup_and_start.sh  (+19 more)
.github/workflows/: documentation.yml
assets/css/: styles.c02ae880.css
assets/js/: 007ec32a.70334a8f.js  02d5ffe3.2cd2e0be.js  07e71f67.d12bf8e3.js  082ca29e.5f5c8b8b.js  0cbcf915.d532c2ac.js  0dffb83e.44de4c26.js  0fb284a5.435b3c27.js  10cf7daa.a1b2bf1d.js  167e21b7.309ca0cf.js  17896441.06381cf4.js  19d29fc2.99c2187d.js  1ab4e047.fad9906b.js  1cf9e5f5.4d9f4a9f.js  206d7740.a9f959dc.js  2237.68e0b0ad.js  2237.e398c9cb.js  27adeb52.06cc3723.js  2e0163a9.22e78d89.js  311b694c.6a0583a2.js  3b9dd042.f1c35a2b.js  3c7ad853.fa5c96f9.js  3f136fa4.d081022a.js  404d45d7.b1c8a86c.js  41f614c0.93d92219.js  4751dffb.ea5407c0.js  4942d2b0.1dc17c6a.js  4e2fd9fa.c7977329.js  4f0755fd.fdec7b86.js  5037eb1f.84521f8b.js  5e95c892.19647530.js  5e95c892.9e88d81a.js  5fd63c42.b3642585.js  64f27434.d6104669.js  6d2b5387.c7e9f096.js  7320d927.5f4d83cb.js  74571443.0d75d0aa.js  751060a0.ffc9fe0b.js  7c8ef09e.a9d2f162.js  846656e5.f2d8d122.js  88494dab.8142ed0d.js  (+21 more)
backend/: Dockerfile  README.md  check_qdrant.py  main.py  pyproject.toml  requirements.txt  test_ingestion.py  test_retrieval.py  test_verification_functionality.py  validate_implementation.py  validation_report.json
backend/book_ingestor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/rag_agent_api/: README.md  __init__.py  agent.py  config.py  main.py  models.py  openrouter_agent.py  retrieval.py  schemas.py  utils.py
backend/tests/: test_agent.py  test_api.py  test_grounding.py  test_integration.py  test_retrieval.py  test_verification.py
backend/verify_retrieval/: README.md  config.py  logging_config.py  main.py  models.py  qdrant_client.py  reporters.py  sample_queries.py  validators.py
book/ros2-workspace/src/cpp_examples/: CMakeLists.txt  package.xml
book/ros2-workspace/src/cpp_examples/config/: cpp_params.yaml
book/ros2-workspace/src/cpp_examples/launch/: cpp_basic_communication_launch.py
book/ros2-workspace/src/cpp_examples/src/: action_client.cpp  action_server.cpp  listener.cpp  service_client.cpp  service_server.cpp  talker.cpp
book/ros2-workspace/src/humanoid_description/: CMakeLists.txt  package.xml
book/ros2-workspace/src/humanoid_description/config/: joint_names.yaml
book/ros2-workspace/src/humanoid_description/launch/: display.launch.py
book/ros2-workspace/src/humanoid_description/rviz/: urdf.rviz
book/ros2-workspace/src/humanoid_description/urdf/: humanoid.urdf.xacro
book/scripts/: validate_lab.py
docs/: 404.html  index.html  index.md  roadmap.html  roadmap.md  sitemap.xml
docs/diagrams/: digital-twin.html
docs/modules/: ai-robot-brain.html  digital-twin.html  lab-exercises.html  lab-exercises.md  ros2-nervous-system.html  vla-system.html
docs/reference/: citations.html  citations.md  glossary.html  glossary.md
history/: implementation-history-book-rag-ingestion.md
modules/: ai-robot-brain.html  digital-twin.html  lab-exercises.html  ros2-nervous-system.html  vla-system.html
modules/ai-robot-brain/: isaac-sim-setup.html  perception-systems.html  planning-control.html  references.html  reinforcement-learning.html  sim2real.html
modules/digital-twin/: gazebo-setup.html  references.html  ros2-sync.html  sensor-simulation.html  unity-integration.html
modules/vla-system/: references.html  (+7 more)
reference/: citations.html  glossary.html
(+400 files in other folders)
